# mi_main_vmp_test

./: .gitignore  README.md  acceptance.sh  final_acceptance.sh  setup-codex.sh
.github/workflows/: manual-review.yml  platform-android-plan.yml  platform-ios-logic.yml  platform-linux.yml  platform-windows.yml  reverse-cost.yml  vmprotect-tier.yml
docs/: ARCHITECTURE.md  CI_SECRETS.md  SECURITY_POLICY.md  TASKS.md
docs/anti-analysis/: JUNK_TEMPLATES.md  README.md
docs/platform/: acceptance.md  android.md  ci.md  ios.md  linux.md  windows.md
docs/qa/: CompletionAudit.md  ExternalEvidenceRequest.md  FinalSignOff.md  GitHubActionsBootstrap.md  ProtectionCapabilityShowcase.md  TaskCoverage.md
docs/references/: OFFICIAL_SOURCES.md
docs/specs/: Acceptance.md  BytecodeSpec.md  PassPipelineSpec.md  ProtectionConfig.md  VMRuntimeABI.md
examples/: protect.sample.yml
plan/: 1.txt
samples/protected_chain/: README.md  sample.protect.yml
scripts/audit/: acceptance_audit.py  add_pe_decoy_sections.py  capability_matrix.py  finalize_external_evidence.py  generate_manual_review_evidence.py  generate_reverse_cost_assessment.py  generate_vmprotect_tier_evidence.py  github_metadata.py  install_reverse_tooling.sh  macho_metadata_audit.py  objective_completion_audit.py  plan_completion_audit.py  platform_string_residuals.py  protected_callgraph_audit.py  protection_capability_showcase.py  reverse_cost_gate.py  reverse_tooling.py  scrub_elf_section_metadata.py  scrub_pe_export_directory.py  scrub_pe_import_directory.py  scrub_pe_section_names.py  surface_minimization_audit.py  verify_github_actions_evidence.py
src/anti_analysis/: __init__.py  artifact_surface.py  cost_control.py  environment.py  junk_templates.py  stack_backtrace.py  string_policy.py
src/core/: Aead.h  Bytecode.cpp  Bytecode.h  CMakeLists.txt  Deterministic.cpp  Deterministic.h  IRLoweringSkeleton.cpp  IRLoweringSkeleton.h  OpcodeMap.cpp  OpcodeMap.h  ProtectionConfig.cpp  ProtectionConfig.h
src/core/llvm/: VMPPassPlugin.cpp
src/platform/: CMakeLists.txt  platform_adapter.h  platform_common.c
src/platform/android/: android_adapter.c
src/platform/ios/: ios_adapter.c
src/platform/linux/: linux_adapter.c  linux_smoke.c
src/platform/windows/: windows_adapter.c  windows_smoke.c
src/runtime/: NestedVM.cpp  NestedVM.h  VMRuntime.cpp  VMRuntime.h
tests/anti_analysis/: test_artifact_surface.py  test_cost_control.py  test_environment.py  test_junk_templates.py  test_stack_backtrace.py  test_string_policy.py
tests/core/: core_tests.cpp  run_core_tests.sh  run_llvm_plugin_test.sh
tests/integration/: run_protected_sample_chain.sh  run_release_protected_binary.sh  run_visible_protected_demo.sh
tests/performance/: protected_sample_benchmark.sh
tests/platform/: android_apk_smoke.sh  android_ci_emulator_smoke.sh  (+18 more)
(+62 files in other folders)
