cmake_minimum_required(VERSION 3.20)
project(vmp_platform_adapters C)

set(PLATFORM_ADAPTER_TARGET "linux" CACHE STRING "Platform adapter to build")
set_property(CACHE PLATFORM_ADAPTER_TARGET PROPERTY STRINGS windows linux android ios)

add_library(vmp_platform_common OBJECT platform_common.c)
target_include_directories(vmp_platform_common PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

if(PLATFORM_ADAPTER_TARGET STREQUAL "windows")
  add_library(vmp_platform SHARED windows/windows_adapter.c $<TARGET_OBJECTS:vmp_platform_common>)
  add_executable(vmp_platform_smoke windows/windows_smoke.c $<TARGET_OBJECTS:vmp_platform_common> windows/windows_adapter.c)
elseif(PLATFORM_ADAPTER_TARGET STREQUAL "linux")
  add_library(vmp_platform SHARED linux/linux_adapter.c $<TARGET_OBJECTS:vmp_platform_common>)
  add_executable(vmp_platform_smoke linux/linux_smoke.c $<TARGET_OBJECTS:vmp_platform_common> linux/linux_adapter.c)
  target_compile_options(vmp_platform PRIVATE -fPIC)
  target_compile_options(vmp_platform_smoke PRIVATE -fPIE)
  target_link_options(vmp_platform PRIVATE -Wl,-z,relro,-z,now)
  target_link_options(vmp_platform_smoke PRIVATE -pie -Wl,-z,relro,-z,now)
elseif(PLATFORM_ADAPTER_TARGET STREQUAL "android")
  add_library(vmp_platform SHARED android/android_adapter.c $<TARGET_OBJECTS:vmp_platform_common>)
elseif(PLATFORM_ADAPTER_TARGET STREQUAL "ios")
  add_library(vmp_platform STATIC ios/ios_adapter.c $<TARGET_OBJECTS:vmp_platform_common>)
else()
  message(FATAL_ERROR "Unknown PLATFORM_ADAPTER_TARGET=${PLATFORM_ADAPTER_TARGET}")
endif()

target_include_directories(vmp_platform PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
if(TARGET vmp_platform_smoke)
  target_include_directories(vmp_platform_smoke PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
endif()
